--- a/src/components/Token/TokenInfo.module.scss
+++ b/src/components/Token/TokenInfo.module.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(90deg, #e0b509, #d2830d);
+    background-color: black;
+    margin-top: 5vh;
     
     h1 {
         margin-top: 6vh;
@@ -11,7 +12,7 @@
     }
 }
 
-.featuresContainer {
+.statsContainer {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -28,9 +29,9 @@
         height: 40px;
     }
 
-    .feature {
+    .stat {
         padding: 8px;
-        background: linear-gradient(90deg, #000000e4, #231c09e1);
+        background: linear-gradient(90deg, #dab00ce4, #ffbb00e1);
         width: 83vw;
         max-width: 420px;
         height: 10vh;
@@ -65,8 +66,10 @@
 }
 
 @media (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
-    .featuresContainer {
-        .feature {
+
+
+    .statsContainer {
+        .stat {
             height: 14vh;
         }
     }
