--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -13,35 +13,33 @@
 
 .featuresContainer {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
-    max-width: 1200px;
+    max-width: 1450px;
     margin: 0 auto;
     gap: 15px;
-
+    flex-wrap: nowrap;
     margin-bottom: 7vh;
 
-    img {
-        width: 40px;
-        height: 40px;
+    .desc {
+        margin-left: 5px;
     }
-
+    
     .feature {
-        padding: 8px;
+        padding: 15px;
         background: linear-gradient(90deg, #000000e4, #231c09e1);
-        width: 83vw;
-        max-width: 420px;
-        height: 10vh;
+        width: 60vw;
+        max-width: 300px;
+        height: 20vh;
         border-radius: 16px;
         display: flex;
-        align-items: center;
-        flex-direction: row;
-        gap: 10px;
+        flex-direction: column;
+        
+        gap: 12px;
 
 
         .imgContainer {
+            
             border: 2px solid white;
             border-radius: 10px;
             width: 50px;
@@ -50,6 +48,12 @@
             align-items: center;
             justify-content: center;
             margin-left: 5px;
+
+            img {
+                width: 40px;
+                height: 40px;
+            }
+        
         }
 
         h2 {
@@ -62,6 +66,8 @@
             font-weight: bold;
         }
     }
+
+    
 }
 
 @media (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
@@ -79,5 +85,35 @@
             margin-top: 2vh;
     
         }
+
+        .featuresContainer {
+            flex-wrap: wrap; /* Включаем wrap для больших экранов */
+            max-width: 600px;
+    
+            .feature {
+                width: 50vw; /* Увеличиваем ширину элементов */
+                max-width: 350px; /* Увеличиваем максимальную ширину */
+                min-width: 320px;
+                height: 15vh;
+            }
+        }
     }
+
+    
+}
+
+@media (max-width: 1200px) {
+    .featuresContainer {
+        flex-wrap: wrap; /* Включаем wrap для больших экранов */
+        max-width: 850px;
+
+        .feature {
+            width: 50vw; /* Увеличиваем ширину элементов */
+            max-width: 350px; /* Увеличиваем максимальную ширину */
+            height: 17vh;
+
+        }
+    }
+
+    
 }
