--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -87,14 +87,14 @@
         }
 
         .featuresContainer {
-            flex-wrap: wrap; /* Включаем wrap для больших экранов */
+            flex-wrap: wrap; 
             max-width: 600px;
     
             .feature {
-                width: 50vw; /* Увеличиваем ширину элементов */
-                max-width: 350px; /* Увеличиваем максимальную ширину */
+                width: 50vw; 
+                max-width: 350px; 
                 min-width: 320px;
-                height: 15vh;
+                height: 17vh;
             }
         }
     }
@@ -104,16 +104,26 @@
 
 @media (max-width: 1200px) {
     .featuresContainer {
-        flex-wrap: wrap; /* Включаем wrap для больших экранов */
+        flex-wrap: wrap; 
         max-width: 850px;
 
         .feature {
-            width: 50vw; /* Увеличиваем ширину элементов */
-            max-width: 350px; /* Увеличиваем максимальную ширину */
+            width: 50vw; 
+            max-width: 350px; 
             height: 17vh;
 
         }
     }
+  
+}
 
-    
+@media (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
+    .featuresContainer {
+
+        .feature {
+
+            height: 28vh;
+
+        }
+    }
 }
