--- a/src/components/Token/TokenInfo.module.scss
+++ b/src/components/Token/TokenInfo.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background: linear-gradient(60deg, #000000, #272729);
     margin-top: 5vh;
     
     h1 {
@@ -31,7 +31,7 @@
 
     .stat {
         padding: 8px;
-        background: linear-gradient(90deg, #dab00ce4, #ffbb00e1);
+        background: linear-gradient(90deg, #dab00ce4, #e4ab0cce);
         width: 83vw;
         max-width: 420px;
         height: 10vh;
@@ -59,15 +59,13 @@
 
         p {
             margin: 0;
-            font-size: clamp(14px, 4vw, 18px);
+            font-size: clamp(15px, 4vw, 20px);
             font-weight: bold;
         }
     }
 }
 
 @media (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
-
-
     .statsContainer {
         .stat {
             height: 16vh;
@@ -82,5 +80,55 @@
             margin-top: 2vh;
     
         }
+    }
+}
+
+.buttonContainer {
+    text-align: center;
+    margin-top: -15px;
+    margin-bottom: 45px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    a {
+        margin: 0 5px 10px; 
+    }
+}
+
+.purchaseButton {
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+    background: linear-gradient(90deg, #e0b509, #d2830d);
+    color: #ffffff;
+    border: none;
+    padding: 12px 24px;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s;
+    text-decoration: none;
+
+    width: 8vw;
+    min-width: 235px;
+    max-width: 100%;
+
+    &:hover {
+        transform: scale(1.05);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    &:active {
+        transform: scale(1);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    img.icon {
+        width: 35px; 
+        height: 35px; 
+        margin-right: 5px; 
+        border-radius: 4px; 
     }
 }
