--- a/src/components/Token/TokenInfo.module.scss
+++ b/src/components/Token/TokenInfo.module.scss
@@ -132,3 +132,22 @@
         border-radius: 4px; 
     }
 }
+
+@media (orientation: landscape) {
+    .buttonContainer {
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        flex-direction: column; 
+        margin-top: 7px; 
+        width: 100%; 
+
+        .purchaseButton {
+            margin: 0 auto;
+            margin-bottom: 10px; 
+            width: 100%; 
+            max-width: 300px;
+        }
+    }
+   
+}
