--- a/src/components/Token/TokenInfo.module.scss
+++ b/src/components/Token/TokenInfo.module.scss
@@ -133,7 +133,7 @@
     }
 }
 
-@media (orientation: landscape) {
+@media (max-width: 932px) and (max-height: 430px) and (orientation: landscape) {
     .buttonContainer {
         display: flex;
         justify-content: center; 
