--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
     background-color: #101114;
     padding: 20px 10px;
     text-align: center;
-    border-top: 1px solid #ecd213;
+    border-top: 2px solid #ffffff;
     color: #d1d1d1;
 }
 
