--- a/src/components/Features/Features.module.scss
+++ b/src/components/Features/Features.module.scss
@@ -4,9 +4,11 @@
     align-items: center;
     justify-content: center;
     background: linear-gradient(90deg, #e0b509, #d2830d);
+    border-top: 2px solid white;
     
     h1 {
-        margin-top: 4vh;
+        margin-top: 35px;
+        margin-bottom: 30px;
         font-size: clamp(26px, 4vw, 36px);
     }
 }
@@ -82,7 +84,7 @@
     .main {
         
         h1 {
-            margin-top: 2vh;
+            margin-top: 30px;
     
         }
 
