--- a/src/components/Token/TokenInfo.module.scss
+++ b/src/components/Token/TokenInfo.module.scss
@@ -5,9 +5,11 @@
     justify-content: center;
     background: linear-gradient(60deg, #000000, #272729);
     margin-top: 5vh;
+    border-top: 2px solid white;
     
     h1 {
-        margin-top: 6vh;
+        margin-top: 35px;
+        margin-bottom: 30px;
         font-size: clamp(26px, 4vw, 36px);
     }
 }
@@ -77,8 +79,8 @@
     .main {
         
         h1 {
-            margin-top: 2vh;
-    
+            margin-top: 30px;
+            margin-bottom: 30px;
         }
     }
 }
