--- a/src/components/Token/TokenInfo.module.scss
+++ b/src/components/Token/TokenInfo.module.scss
@@ -33,7 +33,7 @@
 
     .stat {
         padding: 8px;
-        background: linear-gradient(90deg, #dab00ce4, #e4ab0cce);
+        background: linear-gradient(90deg, #e0b509, #d2830d);
         width: 83vw;
         max-width: 420px;
         height: 10vh;
